--- a/90_Template/01_계획서.md
+++ b/90_Template/01_계획서.md
@@ -19,16 +19,30 @@
 
 
 #### A. SW Flow
-```mermaid
-flowchart TD
-    A[사용자 요청] --> B[입력 전처리]
-    B --> C[질의 분석 및 분해]
-    C --> D["문서 검색 모듈 (Retriever)"]
-    D --> E["문서 저장소 (Database)"]
-    D --> F[관련 문서 추출]
-    F --> G["응답 생성 모듈 (Generator)"]
-    G --> H[응답 후처리 및 조합]
-    H --> I[사용자에게 응답 전달]
+```flowchart TD
+    %% 사용자 입력 및 전처리 %%
+    A[📥 사용자 요청] -->|질문 입력| B[📝 입력 전처리]
+    B -->|토큰화, 정제| C[🔍 질의 분석 및 분해]
+    
+    %% 문서 검색 및 벡터DB 활용 %%
+    C -->|Query Embedding 생성| D["🔎 문서 검색 모듈 (Retriever)"]
+    D -->|검색 실행| E["🗄️ 문서 저장소 (VectorDB - FAISS/Chroma)"]
+    E -->|유사 문서 검색| F["📑 관련 문서 추출"]
+    
+    %% LLM 응답 생성 %%
+    F -->|프롬프트 조합| G["🧠 응답 생성 모듈 (LLM - GPT-4, Gemini)"]
+    G -->|최적 응답 생성| H["🛠️ 응답 후처리 및 조합"]
+    
+    %% 사용자 응답 전달 %%
+    H -->|텍스트 정제 및 최종 응답| I[🌍 사용자에게 응답 전달]
+    
+    %% 문서 처리 및 초기 데이터 구축 %%
+    subgraph 문서 처리 파이프라인
+        J[📂 PDF 문서 (신입생 모집 가이드)] -->|PyMuPDF/pdfplumber| K[📄 PDF 로드 & 텍스트 변환]
+        K -->|RecursiveCharacterTextSplitter| L[📑 문서 조각화 (Chunking)]
+        L -->|OpenAI Embeddings| M[🔍 벡터 변환]
+        M -->|FAISS/ChromaDB 저장| E
+    end
 ```
 ### B. 기능 정의
 
