--- a/90_Template/01_계획서.md
+++ b/90_Template/01_계획서.md
@@ -19,7 +19,8 @@
 
 
 #### A. SW Flow
-```flowchart TD
+```mermaid
+flowchart TD
     %% 사용자 입력 및 전처리 %%
     A[📥 사용자 요청] -->|질문 입력| B[📝 입력 전처리]
     B -->|토큰화, 정제| C[🔍 질의 분석 및 분해]
