--- a/90_Template/01_계획서.md
+++ b/90_Template/01_계획서.md
@@ -39,7 +39,8 @@ flowchart TD
     
     %% 문서 처리 및 초기 데이터 구축 %%
     subgraph 문서 처리 파이프라인
-        J[PDF 문서 (신입생 모집 가이드)] -->|PyMuPDF/pdfplumber| K[PDF 로드 & 텍스트 변환]
+        J[PDF 문서 (신입생 모집 가이드)]
+        J -->|PyMuPDF/pdfplumber| K[PDF 로드 & 텍스트 변환]
         K -->|RecursiveCharacterTextSplitter| L[문서 조각화 (Chunking)]
         L -->|OpenAI Embeddings| M[벡터 변환]
         M -->|FAISS/ChromaDB 저장| E
