--- a/90_Template/01_계획서.md
+++ b/90_Template/01_계획서.md
@@ -27,7 +27,7 @@ flowchart TD
     
     %% 문서 검색 %%
     C -->|쿼리 임베딩 생성| D[문서 검색]
-    D -->|검색 실행| E[벡터DB (FAISS/Chroma)]
+    D -->|검색 실행| E[벡터DB]
     E -->|유사 문서 검색| F[관련 문서 추출]
     
     %% LLM 응답 생성 %%
