--- a/90_Template/01_계획서.md
+++ b/90_Template/01_계획서.md
@@ -31,7 +31,7 @@ flowchart TD
     E -->|유사 문서 검색| F[관련 문서 추출]
     
     %% LLM 응답 생성 %%
-    F -->|프롬프트 생성| G[응답 생성 (GPT-4, Gemini)]
+    F -->|프롬프트 생성| G[응답 생성]
     G -->|최적 응답 생성| H[응답 후처리]
     
     %% 사용자 응답 전달 %%
